# OllaHub

./: .gitignore  IMPLEMENTATION_GUIDE.md  LICENSE  README.md  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  repomix-output.xml
app/: globals.css  layout.tsx  page.tsx
components/: ClientHome.tsx  app-updater-provider.tsx  keyboard-shortcuts.tsx  mode-toggle.tsx  python-bootstrap-progress.tsx  scraping-progress-indicator.tsx  titlebar.tsx
data/: changelog.json
database/: database.ts  migrations.ts  models.json  ollahub-preferences.db-shm  ollahub-preferences.db-wal  ollahub.db-shm  ollahub.db-wal  schema.sql  user-remote-models.json
docs/: style-guide.md  updater-setup.md
hooks/: use-app-updater.ts  use-auto-labeling-model.ts  use-batch-verify.ts  use-chat-storage.ts  use-chat.ts  use-deep-research.ts  use-hardware.ts  use-local-models.ts  use-mcp-servers.ts  use-mcp-tools.ts  use-ollama-check.ts  use-ollama-download.ts  use-operating-system.ts  use-prompt-generator.ts  use-python-bootstrap.ts  use-query-generator.ts  use-query-preprocessor.ts  use-setup-check.ts  use-system-health.ts  use-system-monitor.ts  use-toast.ts  use-web-search.ts  useCopyPrefs.ts  useMCPMarketplace.ts  useMarkdown.ts  useUserPrefs.ts
icons/: icon.psd
lib/: catalog.ts  chat.ts  context-unifier.ts  (+25 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/scripts/: requirements.txt  scraper.py
src-tauri/src/: db.rs  embeddings.rs  intent_classifier.rs  lib.rs  ollama_client.rs  scheduler.rs  scheduler_loop.rs  sources_config.rs  system_monitor.rs  task_executor.rs  web_scraper.rs
(+327 files in other folders)
